removed usage of runtime#exec